infra/kubernetes/latex-compile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: latex-compile
  namespace: default
spec:
  replicas: 6
  selector:
    matchLabels:
      app: latex-compile
  template:
    metadata:
      labels:
        app: latex-compile
    spec:
      containers:
      - name: latex-compile
        image: ghcr.io/openlatex/openlatex-compile:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: latex-compile-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: latex-compile
  ports:
  - port: 80
    targetPort: 9000
    nodePort: 30090
