infra/kubernetes/latex-compile-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: latex-compile-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: latex-compile-svc
            port:
              number: 80
